2002-06-07  Peter Stephenson  <pws@csr.com>

	* 17304: Src/Zle/zle_main.c, Doc/Zsh/zle.yo: (suggested by Bart)
	tweak the tweaked tweak in 17301 so that zle -I returns status
	0 if zle display was successfully invalidated even if by a
	previous call to zle -I (user doesn't care). 

	* 17299: Src/builtin.c, Src/exec.c, Src/init.c, Src/parse.c,
	Src/text.c, Src/zsh.h: Instead of freeing Eprogs in one go
	at the top level, use reference counts.

	* 17301 (doc slightly tweaked): Src/Zle/zle_thingy.c,
	Doc/Zsh/zle.yo: make `zle -I' only invalidate the display on the
	first call to prevent spurious extra command lines appearing.

2002-06-06  Peter Stephenson  <pws@csr.com>

	* 17293: Src/Zle/zle_main.c, Doc/Zsh/zle.yo: support poll()
	as a (preferred) alternative to select() in zle.

2002-06-06  Clint Adams  <clint@zsh.org>

	* 17297: Src/Modules/zpty.c: 17265 continued.

2002-06-05  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 17295: Src/Zle/zle_thingy.c: `zle -F' could fail because
	it examined non-existent arguments.

	* 17294: Src/Modules/tcp.c: remove session even if closing fd
	failed; remove builtin from hash table when unloading module.

2002-06-05  Peter Stephenson  <pws@csr.com>

	* 17292: Src/builtin.c: shut up compiler if no OPEN_MEMSTREAM.

	* 17265: Src/exec.c, Src/jobs.c, Src/Modules/clone.c: Make the
	`jobs' command work in a subshell of a shell with job control by
	saving the valid bits of the job table.

	* 17285: David Wolfe <dwolfe@gforcetech.com>:
	Src/Builtins/rlimits.c: finally fix 16145 to eliminate duplicate
	case statement also in ulimit.

2002-06-05  Sven Wischnowsky  <wischnow@zsh.org>

	* 17286: Src/Zle/complist.c: don't use optimised completion
	list display code after the list has been erased or we're not
	in menu selection anymore anyway

2002-06-04  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 17283: Src/parse.c: `func() { ... } this bit was ignored'.

2002-06-02  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>
